--- a/Step 2 - Scrubbing Data.ipynb
+++ b/Step 2 - Scrubbing Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "acc747e0",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "07330183",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
        "4  1,260,681            8.7      293,467  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "e02eaad5",
    "metadata": {},
    "outputs": [
@@ -189,18 +189,19 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## Fill null\\missing\n",
     "df.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "ffd33869",
    "metadata": {},
    "outputs": [
@@ -453,7 +454,7 @@
        "[1031 rows x 12 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "f1e4061f",
    "metadata": {},
    "outputs": [
@@ -718,7 +719,7 @@
        "[1031 rows x 12 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "e6fcb49b",
    "metadata": {},
    "outputs": [
@@ -752,13 +753,279 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "520afda7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Imdb Rating</th>\n",
+       "      <th>Director</th>\n",
+       "      <th>Votes</th>\n",
+       "      <th>Gross</th>\n",
+       "      <th>malesRating</th>\n",
+       "      <th>malesCount</th>\n",
+       "      <th>femalesRating</th>\n",
+       "      <th>femalesCount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The Dark Knight</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>tt0468569</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>Christopher Nolan</td>\n",
+       "      <td>2,556,384</td>\n",
+       "      <td>534.86</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1,476,807</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>264,598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Lord of the Rings: The Return of the King</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>tt0167260</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>Peter Jackson</td>\n",
+       "      <td>1,777,166</td>\n",
+       "      <td>377.85</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1,027,904</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>218,150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>K.G.F: Chapter 2</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>tt10698680</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>Prashanth Neel</td>\n",
+       "      <td>93,320</td>\n",
+       "      <td>92.52</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>13,286</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Everything Everywhere All at Once</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>tt6710474</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>Dan Kwan</td>\n",
+       "      <td>39,711</td>\n",
+       "      <td>92.52</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>17,826</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>3,781</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Inception</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>tt1375666</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>Christopher Nolan</td>\n",
+       "      <td>2,269,287</td>\n",
+       "      <td>292.58</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>1,260,681</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>293,467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1025</th>\n",
+       "      <td>Back to the Future Part III</td>\n",
+       "      <td>Western</td>\n",
+       "      <td>tt0099088</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>Robert Zemeckis</td>\n",
+       "      <td>435,704</td>\n",
+       "      <td>87.73</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>270,339</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>40,788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1027</th>\n",
+       "      <td>The Ballad of Buster Scruggs</td>\n",
+       "      <td>Western</td>\n",
+       "      <td>tt6412452</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>Ethan Coen</td>\n",
+       "      <td>142,189</td>\n",
+       "      <td>92.52</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>86,392</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>10,974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1028</th>\n",
+       "      <td>Bacurau</td>\n",
+       "      <td>Western</td>\n",
+       "      <td>tt2762506</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>Juliano Dornelles</td>\n",
+       "      <td>26,525</td>\n",
+       "      <td>92.52</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>16,456</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>2,542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1029</th>\n",
+       "      <td>The Proposition</td>\n",
+       "      <td>Western</td>\n",
+       "      <td>tt0421238</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>John Hillcoat</td>\n",
+       "      <td>52,397</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>39,814</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>3,532</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1030</th>\n",
+       "      <td>Pale Rider</td>\n",
+       "      <td>Western</td>\n",
+       "      <td>tt0089767</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>Clint Eastwood</td>\n",
+       "      <td>58,595</td>\n",
+       "      <td>41.41</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>41,744</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>2,643</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>596 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               Name    Genre          ID  \\\n",
+       "0                                   The Dark Knight   Action   tt0468569   \n",
+       "1     The Lord of the Rings: The Return of the King   Action   tt0167260   \n",
+       "2                                  K.G.F: Chapter 2   Action  tt10698680   \n",
+       "3                 Everything Everywhere All at Once   Action   tt6710474   \n",
+       "4                                         Inception   Action   tt1375666   \n",
+       "...                                             ...      ...         ...   \n",
+       "1025                    Back to the Future Part III  Western   tt0099088   \n",
+       "1027                   The Ballad of Buster Scruggs  Western   tt6412452   \n",
+       "1028                                        Bacurau  Western   tt2762506   \n",
+       "1029                                The Proposition  Western   tt0421238   \n",
+       "1030                                     Pale Rider  Western   tt0089767   \n",
+       "\n",
+       "      Year  Imdb Rating           Director      Votes   Gross  malesRating  \\\n",
+       "0     2008          9.0  Christopher Nolan  2,556,384  534.86          9.0   \n",
+       "1     2003          9.0      Peter Jackson  1,777,166  377.85          9.0   \n",
+       "2     2022          8.9     Prashanth Neel     93,320   92.52          8.3   \n",
+       "3     2022          8.8           Dan Kwan     39,711   92.52          8.7   \n",
+       "4     2010          8.8  Christopher Nolan  2,269,287  292.58          8.8   \n",
+       "...    ...          ...                ...        ...     ...          ...   \n",
+       "1025  1990          7.4    Robert Zemeckis    435,704   87.73          7.4   \n",
+       "1027  2018          7.3         Ethan Coen    142,189   92.52          7.3   \n",
+       "1028  2019          7.3  Juliano Dornelles     26,525   92.52          7.3   \n",
+       "1029  2005          7.3      John Hillcoat     52,397     1.9          7.3   \n",
+       "1030  1985          7.3     Clint Eastwood     58,595   41.41          7.2   \n",
+       "\n",
+       "     malesCount  femalesRating femalesCount  \n",
+       "0     1,476,807            8.7      264,598  \n",
+       "1     1,027,904            8.9      218,150  \n",
+       "2        13,286            7.5          428  \n",
+       "3        17,826            8.7        3,781  \n",
+       "4     1,260,681            8.7      293,467  \n",
+       "...         ...            ...          ...  \n",
+       "1025    270,339            7.4       40,788  \n",
+       "1027     86,392            7.2       10,974  \n",
+       "1028     16,456            7.6        2,542  \n",
+       "1029     39,814            7.3        3,532  \n",
+       "1030     41,744            7.2        2,643  \n",
+       "\n",
+       "[596 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## drop duplicates\n",
+    "df.drop_duplicates(subset='Name', keep='first', inplace=True)\n",
+    "df"
    ]
   },
   {
