clean code and add step 4

--- a/Step 1 - Data Collection.ipynb
+++ b/Step 1 - Data Collection.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4bc2cdc8",
+   "metadata": {},
+   "source": [
+    "## Step 1 - Data Collection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2aa4cc55",
+   "metadata": {},
+   "source": [
+    "In this step, we will collect information regarding IMDb."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "c4b7ad2a",
