--- a/Step 2 - Scrubbing Data.ipynb
+++ b/Step 2 - Scrubbing Data.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ce31ea12",
+   "metadata": {},
+   "source": [
+    "## Step 2 - Scrubbing Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12566183",
+   "metadata": {},
+   "source": [
+    "In this step, we will Cleaning, formatting and filtering the data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "acc747e0",
