--- a/Step 2 - Scrubbing Data.ipynb
+++ b/Step 2 - Scrubbing Data.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "id": "acc747e0",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "id": "07330183",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "4  1,025,720            8.8      229,858  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,8 +183,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "76ea8a8f",
+   "metadata": {},
+   "source": [
+    "#### Filling in missing/empty data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cf588a8",
+   "metadata": {},
+   "source": [
+    "#### NULL test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "id": "e02eaad5",
    "metadata": {},
    "outputs": [
@@ -206,19 +222,26 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## Fill null\\missing\n",
     "df.isnull().sum()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a91989a9",
+   "metadata": {},
+   "source": [
+    "#### replace of irrelevant characters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "id": "ffd33869",
    "metadata": {},
    "outputs": [
@@ -471,7 +494,7 @@
        "[4691 rows x 12 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,8 +505,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "acb4be3f",
+   "metadata": {},
+   "source": [
+    "#### Filling in missing data by mean"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "id": "f1e4061f",
    "metadata": {},
    "outputs": [
@@ -736,7 +767,7 @@
        "[4691 rows x 12 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "id": "e6fcb49b",
    "metadata": {},
    "outputs": [
@@ -770,7 +801,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,8 +811,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "803971ab",
+   "metadata": {},
+   "source": [
+    "#### Check for duplicates"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "520afda7",
    "metadata": {},
    "outputs": [],
@@ -792,18 +831,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e458d625",
+   "metadata": {},
+   "source": [
+    "#### Drop ID from table"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "cbcc867e",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Drop ID from table\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1041,20 +1081,27 @@
        "[4691 rows x 11 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print (\"Drop ID from table\")\n",
     "df = df.drop('ID', axis=1)\n",
     "df"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "73b04f2c",
+   "metadata": {},
+   "source": [
+    "### Fix of column types"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "49057eb7",
    "metadata": {},
    "outputs": [
@@ -1092,7 +1139,7 @@
    "id": "6bdbf82b",
    "metadata": {},
    "source": [
-    "Fixing objects to number"
+    "#### Fixing objects to number"
    ]
   },
   {
@@ -1100,12 +1147,12 @@
    "id": "362efce6",
    "metadata": {},
    "source": [
-    "-For Votes:"
+    "#### -For Votes:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "id": "c2c1565e",
    "metadata": {},
    "outputs": [
@@ -1115,7 +1162,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,12 +1178,12 @@
    "id": "c93526a5",
    "metadata": {},
    "source": [
-    "-For Gross:"
+    "####  -For Gross:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "id": "f83d8900",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1193,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,12 +1209,12 @@
    "id": "785bebd1",
    "metadata": {},
    "source": [
-    "-For MalesCount:"
+    "####  -For MalesCount:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "id": "8e6f5bd5",
    "metadata": {},
    "outputs": [
@@ -1177,7 +1224,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,12 +1240,12 @@
    "id": "11e72b44",
    "metadata": {},
    "source": [
-    "-For FemalesCount:"
+    "#### -For FemalesCount:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "id": "df2ef89c",
    "metadata": {},
    "outputs": [
@@ -1208,7 +1255,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,12 +1271,12 @@
    "id": "f670bf11",
    "metadata": {},
    "source": [
-    "-For Year:"
+    "#### -For Year:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "id": "98e6f8bf",
    "metadata": {},
    "outputs": [
@@ -1239,7 +1286,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,12 +1302,12 @@
    "id": "5793191b",
    "metadata": {},
    "source": [
-    "Info"
+    "#### Test after fix types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "id": "f4b78e22",
    "metadata": {},
    "outputs": [
@@ -1294,8 +1341,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7e237786",
+   "metadata": {},
+   "source": [
+    "#### Display Describe"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "id": "1cc91110",
    "metadata": {},
    "outputs": [
@@ -1445,7 +1500,7 @@
        "max            9.40    294019.00  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "id": "32c7eb2e",
    "metadata": {},
    "outputs": [
@@ -1697,7 +1752,7 @@
        "[4691 rows x 11 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1707,22 +1762,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a035e2a7",
+   "metadata": {},
+   "source": [
+    "### Save new data to CSV"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 18,
    "id": "6d21b6e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(\"IMDb_rating_data_after_scrubbing.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98e640cf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
